Refactor PDF generation script to enhance font selection and error handling

--- a/code-style.tex
+++ b/code-style.tex
@@ -11,20 +11,20 @@
 \definecolor{codecomment}{RGB}{120,120,120}
 
 \lstdefinestyle{ieeedefault}{
-  backgroundcolor=\color{codebg},
-  basicstyle=\ttfamily\footnotesize,
-  frame=single,
-  rulecolor=\color{codeframe},
-  frameround=tttt, % cantos arredondados
-  breaklines=true,
-  tabsize=2,
-  showstringspaces=false,
-  numbers=left,
-  numberstyle=\tiny\color{codenum},
-  numbersep=6pt,
-  keywordstyle=\bfseries\color{codekw},
-  commentstyle=\itshape\color{codecomment},
-  stringstyle=\color{codestring}
+    backgroundcolor=\color{codebg},
+    basicstyle=\ttfamily\footnotesize,
+    frame=single,
+    rulecolor=\color{codeframe},
+    frameround=tttt, % cantos arredondados
+    breaklines=true,
+    tabsize=2,
+    showstringspaces=false,
+    numbers=left,
+    numberstyle=\tiny\color{codenum},
+    numbersep=5pt,
+    keywordstyle=\bfseries\color{codekw},
+    commentstyle=\itshape\color{codecomment},
+    stringstyle=\color{codestring},
 }
 
 \lstset{style=ieeedefault}
