Refactor PDF generation script to enhance font selection and error handling

--- a/code-style.tex
+++ b/code-style.tex
@@ -21,10 +21,12 @@
     showstringspaces=false,
     numbers=left,
     numberstyle=\tiny\color{codenum},
-    numbersep=5pt,
+    numbersep=6pt,
     keywordstyle=\bfseries\color{codekw},
     commentstyle=\itshape\color{codecomment},
     stringstyle=\color{codestring},
+    xleftmargin=1.2em,
+    xrightmargin=0.8em,
 }
 
 \lstset{style=ieeedefault}
